antlr4_files/SelectSQLParser.py
# Generated from SelectSQL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SelectSQLParser ( Parser ):

    grammarFileName = "SelectSQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'SELECT'", "'FROM'", "'WHERE'", 
                     "'GROUP'", "'BY'", "'HAVING'", "'ORDER'", "'ASC'", 
                     "'DESC'", "';'", "'JOIN'", "'ON'", "'DISTINCT'", "'ALL'", 
                     "'UNION'", "'AS'", "'IS'", "'NOT'", "'NULL'", "<INVALID>", 
                     "<INVALID>", "'AND'", "'OR'", "'WITH'", "'BETWEEN'", 
                     "'LIMIT'", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "<INVALID>", "'<'", "'<='", "'>'", 
                     "'>='", "','", "'.'", "'&'", "'|'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "ASTERISK", "SELECT", "FROM", "WHERE", 
                      "GROUP", "BY", "HAVING", "ORDER", "ASC", "DESC", "SEMICOLON", 
                      "JOIN", "ON", "DISTINCT", "ALL", "UNION", "AS", "IS", 
                      "NOT", "NULL", "AGGREGATE", "JOIN_TYPE", "AND", "OR", 
                      "WITH", "BETWEEN", "LIMIT", "LPAREN", "RPAREN", "STRING", 
                      "IDENTIFIER", "NUMBER", "EQ", "NE", "LT", "LTE", "GT", 
                      "GTE", "COMMA", "DOT", "AMP", "PIPE", "QT", "WS" ]

    RULE_select_statement = 0
    RULE_select_with_cte = 1
    RULE_select_clause = 2
    RULE_from_clause = 3
    RULE_where_clause = 4
    RULE_group_by_clause = 5
    RULE_having_clause = 6
    RULE_order_by_clause = 7
    RULE_limit_clause = 8
    RULE_column_name_list = 9
    RULE_modifier = 10
    RULE_select_list = 11
    RULE_select_item = 12
    RULE_expression = 13
    RULE_table_list = 14
    RULE_aggregate_function = 15
    RULE_subquery = 16
    RULE_table_column = 17
    RULE_table_name = 18
    RULE_column_name = 19
    RULE_join_list = 20
    RULE_join_clause = 21
    RULE_join_condition = 22
    RULE_union_clause = 23
    RULE_condition = 24
    RULE_logicalCondition = 25
    RULE_subqueryCondition = 26
    RULE_comparison_condition = 27
    RULE_between_condition = 28
    RULE_logical_operator = 29
    RULE_comparison_operator = 30
    RULE_value = 31
    RULE_number = 32

    ruleNames =  [ "select_statement", "select_with_cte", "select_clause", 
                   "from_clause", "where_clause", "group_by_clause", "having_clause", 
                   "order_by_clause", "limit_clause", "column_name_list", 
                   "modifier", "select_list", "select_item", "expression", 
                   "table_list", "aggregate_function", "subquery", "table_column", 
                   "table_name", "column_name", "join_list", "join_clause", 
                   "join_condition", "union_clause", "condition", "logicalCondition", 
                   "subqueryCondition", "comparison_condition", "between_condition", 
                   "logical_operator", "comparison_operator", "value", "number" ]

    EOF = Token.EOF
    ASTERISK=1
    SELECT=2
    FROM=3
    WHERE=4
    GROUP=5
    BY=6
    HAVING=7
    ORDER=8
    ASC=9
    DESC=10
    SEMICOLON=11
    JOIN=12
    ON=13
    DISTINCT=14
    ALL=15
    UNION=16
    AS=17
    IS=18
    NOT=19
    NULL=20
    AGGREGATE=21
    JOIN_TYPE=22
    AND=23
    OR=24
    WITH=25
    BETWEEN=26
    LIMIT=27
    LPAREN=28
    RPAREN=29
    STRING=30
    IDENTIFIER=31
    NUMBER=32
    EQ=33
    NE=34
    LT=35
    LTE=36
    GT=37
    GTE=38
    COMMA=39
    DOT=40
    AMP=41
    PIPE=42
    QT=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Select_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.Select_clauseContext,0)


        def from_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.From_clauseContext,0)


        def select_with_cte(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectSQLParser.Select_with_cteContext)
            else:
                return self.getTypedRuleContext(SelectSQLParser.Select_with_cteContext,i)


        def join_list(self):
            return self.getTypedRuleContext(SelectSQLParser.Join_listContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.Where_clauseContext,0)


        def group_by_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.Group_by_clauseContext,0)


        def having_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.Having_clauseContext,0)


        def order_by_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.Order_by_clauseContext,0)


        def limit_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.Limit_clauseContext,0)


        def union_clause(self):
            return self.getTypedRuleContext(SelectSQLParser.Union_clauseContext,0)


        def select_statement(self):
            return self.getTypedRuleContext(SelectSQLParser.Select_statementContext,0)


        def SEMICOLON(self):
            return self.getToken(SelectSQLParser.SEMICOLON, 0)

        def EOF(self):
            return self.getToken(SelectSQLParser.EOF, 0)

        def getRuleIndex(self):
            return SelectSQLParser.RULE_select_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_statement" ):
                listener.enterSelect_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_statement" ):
                listener.exitSelect_statement(self)




    def select_statement(self):

        localctx = SelectSQLParser.Select_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_select_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 66
                    self.select_with_cte() 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 72
            self.select_clause()
            self.state = 73
            self.from_clause()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12 or _la==22:
                self.state = 74
                self.join_list()


            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 77
                self.where_clause()


            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 80
                self.group_by_clause()


            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 83
                self.having_clause()


            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 86
                self.order_by_clause()


            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 89
                self.limit_clause()


            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 92
                self.union_clause()
                self.state = 93
                self.select_statement()


            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 97
                self.match(SelectSQLParser.SEMICOLON)


            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(SelectSQLParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_with_cteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITH(self):
            return self.getToken(SelectSQLParser.WITH, 0)

        def column_name_list(self):
            return self.getTypedRuleContext(SelectSQLParser.Column_name_listContext,0)


        def AS(self):
            return self.getToken(SelectSQLParser.AS, 0)

        def LPAREN(self):
            return self.getToken(SelectSQLParser.LPAREN, 0)

        def select_statement(self):
            return self.getTypedRuleContext(SelectSQLParser.Select_statementContext,0)


        def RPAREN(self):
            return self.getToken(SelectSQLParser.RPAREN, 0)

        def getRuleIndex(self):
            return SelectSQLParser.RULE_select_with_cte

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_with_cte" ):
                listener.enterSelect_with_cte(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_with_cte" ):
                listener.exitSelect_with_cte(self)




    def select_with_cte(self):

        localctx = SelectSQLParser.Select_with_cteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_select_with_cte)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(SelectSQLParser.WITH)
            self.state = 104
            self.column_name_list()
            self.state = 105
            self.match(SelectSQLParser.AS)
            self.state = 106
            self.match(SelectSQLParser.LPAREN)
            self.state = 107
            self.select_statement()
            self.state = 108
            self.match(SelectSQLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SelectSQLParser.SELECT, 0)

        def select_list(self):
            return self.getTypedRuleContext(SelectSQLParser.Select_listContext,0)


        def modifier(self):
            return self.getTypedRuleContext(SelectSQLParser.ModifierContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_select_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_clause" ):
                listener.enterSelect_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_clause" ):
                listener.exitSelect_clause(self)




    def select_clause(self):

        localctx = SelectSQLParser.Select_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_select_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(SelectSQLParser.SELECT)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 111
                self.modifier()


            self.state = 114
            self.select_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(SelectSQLParser.FROM, 0)

        def table_list(self):
            return self.getTypedRuleContext(SelectSQLParser.Table_listContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_from_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_clause" ):
                listener.enterFrom_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_clause" ):
                listener.exitFrom_clause(self)




    def from_clause(self):

        localctx = SelectSQLParser.From_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_from_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SelectSQLParser.FROM)
            self.state = 117
            self.table_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(SelectSQLParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(SelectSQLParser.ConditionContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_where_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_clause" ):
                listener.enterWhere_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_clause" ):
                listener.exitWhere_clause(self)




    def where_clause(self):

        localctx = SelectSQLParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_where_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SelectSQLParser.WHERE)
            self.state = 120
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Group_by_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(SelectSQLParser.GROUP, 0)

        def BY(self):
            return self.getToken(SelectSQLParser.BY, 0)

        def column_name_list(self):
            return self.getTypedRuleContext(SelectSQLParser.Column_name_listContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_group_by_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup_by_clause" ):
                listener.enterGroup_by_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup_by_clause" ):
                listener.exitGroup_by_clause(self)




    def group_by_clause(self):

        localctx = SelectSQLParser.Group_by_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_group_by_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SelectSQLParser.GROUP)
            self.state = 123
            self.match(SelectSQLParser.BY)
            self.state = 124
            self.column_name_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Having_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HAVING(self):
            return self.getToken(SelectSQLParser.HAVING, 0)

        def condition(self):
            return self.getTypedRuleContext(SelectSQLParser.ConditionContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_having_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHaving_clause" ):
                listener.enterHaving_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHaving_clause" ):
                listener.exitHaving_clause(self)




    def having_clause(self):

        localctx = SelectSQLParser.Having_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_having_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(SelectSQLParser.HAVING)
            self.state = 127
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Order_by_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(SelectSQLParser.ORDER, 0)

        def BY(self):
            return self.getToken(SelectSQLParser.BY, 0)

        def column_name_list(self):
            return self.getTypedRuleContext(SelectSQLParser.Column_name_listContext,0)


        def ASC(self):
            return self.getToken(SelectSQLParser.ASC, 0)

        def DESC(self):
            return self.getToken(SelectSQLParser.DESC, 0)

        def getRuleIndex(self):
            return SelectSQLParser.RULE_order_by_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrder_by_clause" ):
                listener.enterOrder_by_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrder_by_clause" ):
                listener.exitOrder_by_clause(self)




    def order_by_clause(self):

        localctx = SelectSQLParser.Order_by_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_order_by_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(SelectSQLParser.ORDER)
            self.state = 130
            self.match(SelectSQLParser.BY)
            self.state = 131
            self.column_name_list()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9 or _la==10:
                self.state = 132
                _la = self._input.LA(1)
                if not(_la==9 or _la==10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Limit_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIMIT(self):
            return self.getToken(SelectSQLParser.LIMIT, 0)

        def number(self):
            return self.getTypedRuleContext(SelectSQLParser.NumberContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_limit_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLimit_clause" ):
                listener.enterLimit_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLimit_clause" ):
                listener.exitLimit_clause(self)




    def limit_clause(self):

        localctx = SelectSQLParser.Limit_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_limit_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(SelectSQLParser.LIMIT)
            self.state = 136
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_name_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectSQLParser.Column_nameContext)
            else:
                return self.getTypedRuleContext(SelectSQLParser.Column_nameContext,i)


        def table_column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectSQLParser.Table_columnContext)
            else:
                return self.getTypedRuleContext(SelectSQLParser.Table_columnContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SelectSQLParser.COMMA)
            else:
                return self.getToken(SelectSQLParser.COMMA, i)

        def getRuleIndex(self):
            return SelectSQLParser.RULE_column_name_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_name_list" ):
                listener.enterColumn_name_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_name_list" ):
                listener.exitColumn_name_list(self)




    def column_name_list(self):

        localctx = SelectSQLParser.Column_name_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_column_name_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 138
                self.column_name()
                pass

            elif la_ == 2:
                self.state = 139
                self.table_column()
                pass


            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 142
                self.match(SelectSQLParser.COMMA)
                self.state = 145
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 143
                    self.column_name()
                    pass

                elif la_ == 2:
                    self.state = 144
                    self.table_column()
                    pass


                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DISTINCT(self):
            return self.getToken(SelectSQLParser.DISTINCT, 0)

        def getRuleIndex(self):
            return SelectSQLParser.RULE_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifier" ):
                listener.enterModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifier" ):
                listener.exitModifier(self)




    def modifier(self):

        localctx = SelectSQLParser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_modifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(SelectSQLParser.DISTINCT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectSQLParser.Select_itemContext)
            else:
                return self.getTypedRuleContext(SelectSQLParser.Select_itemContext,i)


        def table_column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SelectSQLParser.Table_columnContext)
            else:
                return self.getTypedRuleContext(SelectSQLParser.Table_columnContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SelectSQLParser.COMMA)
            else:
                return self.getToken(SelectSQLParser.COMMA, i)

        def ASTERISK(self):
            return self.getToken(SelectSQLParser.ASTERISK, 0)

        def getRuleIndex(self):
            return SelectSQLParser.RULE_select_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_list" ):
                listener.enterSelect_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_list" ):
                listener.exitSelect_list(self)




    def select_list(self):

        localctx = SelectSQLParser.Select_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_select_list)
        self._la = 0 # Token type
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21, 28, 31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 154
                    self.select_item()
                    pass

                elif la_ == 2:
                    self.state = 155
                    self.table_column()
                    pass


                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==39:
                    self.state = 158
                    self.match(SelectSQLParser.COMMA)
                    self.state = 161
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                    if la_ == 1:
                        self.state = 159
                        self.select_item()
                        pass

                    elif la_ == 2:
                        self.state = 160
                        self.table_column()
                        pass


                    self.state = 167
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.match(SelectSQLParser.ASTERISK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SelectSQLParser.ExpressionContext,0)


        def AS(self):
            return self.getToken(SelectSQLParser.AS, 0)

        def column_name(self):
            return self.getTypedRuleContext(SelectSQLParser.Column_nameContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_select_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_item" ):
                listener.enterSelect_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_item" ):
                listener.exitSelect_item(self)




    def select_item(self):

        localctx = SelectSQLParser.Select_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_select_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.expression()
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 172
                self.match(SelectSQLParser.AS)
                self.state = 173
                self.column_name()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_name(self):
            return self.getTypedRuleContext(SelectSQLParser.Column_nameContext,0)


        def aggregate_function(self):
            return self.getTypedRuleContext(SelectSQLParser.Aggregate_functionContext,0)


        def subquery(self):
            return self.getTypedRuleContext(SelectSQLParser.SubqueryContext,0)


        def table_column(self):
            return self.getTypedRuleContext(SelectSQLParser.Table_columnContext,0)


        def getRuleIndex(self):
            return SelectSQLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = SelectSQLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expression)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.column_name()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.aggregate_function()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 178
                self.subquery()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.table_column()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
